<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/write_code"
        style="@style/textStyle"
        android:layout_marginStart="47dp"
        android:layout_marginTop="219dp" />
    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/_1"
        style="@style/keyboardStyle"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="73dp"
        android:layout_marginTop="289dp" />
    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/_2"
        style="@style/keyboardStyle"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="174dp"
        android:layout_marginTop="289dp"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/_3"
        style="@style/keyboardStyle"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="275dp"
        android:layout_marginTop="289dp" />
    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/_4"
        style="@style/keyboardStyle"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="73dp"
        android:layout_marginTop="361dp" />
    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/_5"
        style="@style/keyboardStyle"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="174dp"
        android:layout_marginTop="361dp"/>
    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/_6"
        style="@style/keyboardStyle"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="275dp"
        android:layout_marginTop="361dp" />
    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/_7"
        style="@style/keyboardStyle"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="73dp"
        android:layout_marginTop="433dp"/>
    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/_8"
        style="@style/keyboardStyle"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="174dp"
        android:layout_marginTop="433dp"/>
    <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/_9"
        style="@style/keyboardStyle"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="275dp"
        android:layout_marginTop="433dp"/>
    <Button
        android:id="@+id/back"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/back"
        android:textColor="#1789DB"
        android:textSize="@dimen/textSize"
        android:background="@drawable/button_shape_default"
        app:backgroundTint="@null"
        android:layout_marginStart="73dp"
        android:layout_marginTop="505dp"/>
    <Button
        android:id="@+id/button0"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/_0"
        style="@style/keyboardStyle"
        android:background="@drawable/button_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="174dp"
        android:layout_marginTop="505dp"/>
    <Button
        android:id="@+id/OK"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/ok"
        android:textColor="#1789DB"
        android:textSize="@dimen/textSize"
        android:background="@drawable/button0k_shape"
        app:backgroundTint="@null"
        android:layout_marginStart="275dp"
        android:layout_marginTop="505dp"/>

</FrameLayout>