<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <View
        android:id="@+id/rectangle_1"
        android:layout_width="371dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/string2"
        android:layout_width="239.28dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="7sp"
        android:text="@string/string2"
        android:textAppearance="@style/style2"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="371dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="371dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

    <TextView
        android:id="@+id/string3"
        android:layout_width="239.28dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="7sp"
        android:text="@string/string3"
        android:textAppearance="@style/style3"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3" />

    <TextView
        android:id="@+id/string4"
        android:layout_width="239.28dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="7sp"
        android:text="@string/string4"
        android:textAppearance="@style/style4"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2" />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="371dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />

    <TextView
        android:id="@+id/string5"
        android:layout_width="239.28dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="7sp"
        android:text="@string/string5"
        android:textAppearance="@style/style5"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
        app:layout_constraintTop_toTopOf="@+id/rectangle_4" />
</androidx.constraintlayout.widget.ConstraintLayout>